--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Blog</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Blog</h1>
 
-{% for p in posts %}
-    <hr/>
+    {% for p in post_list %}
+    <hr />
     <h2><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>
     <h4>{{ p.created_at }}</h4>
     <p>{{ p.content }}</p>
-{% endfor %}
-</body>
+    {% endfor %}
+  </body>
 </html>
