--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -152,7 +152,7 @@
             <a href="#!"
               ><img
                 class="card-img-top"
-                src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg"
+                src="{{ p.head_image.url }}"
                 alt="..."
             /></a>
             <div class="card-body">
