--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -162,8 +162,11 @@
             <div class="card-body">
               <div class="small text-muted">{{ p.created_at }}</div>
               <h2 class="card-title h4">{{ p.title }}</h2>
+              {% if p.hook_text %}
+                <h5 class="text-muted">{{ p.hook_text }}</h5>
+              {% endif %}
               <p class="card-text">
-                {{ p.content }}
+                {{ p.content | truncatewords:45 }}
               </p>
               <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
             </div>
