--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,7 +16,7 @@
                 <img class="card-img-top" src="https://picsum.photos/seed/{{ p.if }}/800/200" alt="random_image">
             {% endif %}
             <div class="card-body">
-              <div class="small text-muted">{{ p.created_at }}</div>
+<!--              <div class="small text-muted">{{ p.created_at }}</div>-->
               <h2 class="card-title h4">{{ p.title }}</h2>
               {% if p.hook_text %}
                 <h5 class="text-muted">{{ p.hook_text }}</h5>
@@ -25,6 +25,11 @@
                 {{ p.content | truncatewords:45 }}
               </p>
               <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
+              <br><br>
+              <div class="card-footer text-muted">
+                Posted on {{ p.created_at }} by
+                <a href="#">{{ p.author | upper }}</a>
+              </div>
             </div>
           </div>
           {% endfor %}
