--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,18 +12,18 @@
             <span class="badge badge-secondary float-right">미분류</span>
         {% endif %}
                     <article>
-                            <!-- Post title-->
-                            <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
-                            <h5 class="text-muted">{{ post.hook_text }}</h5>
-                            <!-- author -->
-                            <p class="lead">
-                                by
-                                <a href="#">{{ post.author | upper }}</a>
-                            </p>
-                            <hr>
-                            <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
-                            <hr>
+                        <!-- Post title-->
+                        <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
+                        <h5 class="text-muted">{{ post.hook_text }}</h5>
+                        <!-- author -->
+                        <p class="lead">
+                            by
+                            <a href="#">{{ post.author | upper }}</a>
+                        </p>
+                        <hr>
+                        <!-- Post meta content-->
+                        <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
+                        <hr>
                         </header>
                         <!-- Preview image figure-->
                         {% if post.head_image %}
@@ -34,6 +34,14 @@
                         <!-- Post content-->
                         <section class="mb-5">
                             <p>{{ post.content }}</p>
+                            {% if post.tags.exists %}
+                                <i class="fas fa-tags"></i>
+                            {% for tag in post.tags.iterator %}
+                                <a href="{{ tag.get_absolute_url }}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
+                            {% endfor %}
+                                <br>
+                                <br>
+                            {% endif %}
                             {% if post.file_upload %}
                                 <a href="{{ post.file_upload.url }}" class="btn btn-outline-dark" role="button"download>
                                     Download:
