--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -23,6 +23,14 @@
               <p class="card-text">
                 {{ p.content | truncatewords:45 }}
               </p>
+              {% if p.tags.exists %}
+                <i class="fas fa-tags"></i>
+                {% for tag in p.tags.iterator %}
+                  <a href="{{ tag.get_absolute_url }}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
+                {% endfor %}
+                <br>
+                <br>
+              {% endif %}
               <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
               <br><br>
               <div class="card-footer text-muted">
