--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,92 +1,103 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
     {{ post.title }} - Blog
 {% endblock %}
-
 {% block main_area %}
-    <div id="post-area">
-        {% if post.category %}
-            <span class="badge badge-secondary float-right">{{ post.category }}</span>
-        {% else %}
-            <span class="badge badge-secondary float-right">미분류</span>
-        {% endif %}
-        <article>
-            <!-- Post title-->
-            <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
-            <h5 class="text-muted">{{ post.hook_text }}</h5>
-            <!-- author -->
-            <p class="lead">
-                by
-                <a href="#">{{ post.author | upper }}</a>
-            </p>
-            <hr>
-            {% if user.is_authenticated and user == post.author %}
-                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{ post.pk }}/" role="button"><i class="fas fa-pen"></i>  Edit Post</a>
-            {% endif %}
-            <!-- Post meta content-->
-            <div class="text-muted fst-italic mb-2">{{ post.created_at }}</div>
-            <hr>
-            </header>
-            <!-- Preview image figure-->
-            {% if post.head_image %}
-                <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url}}" alt="{{ post.title }} head_image" /></figure>
-            {% else %}
-                <img class="card-img-top" src="https://picsum.photos/seed/{{ p.if }}/800/200" alt="random_image">
-            {% endif %}
-            <!-- Post content-->
-            <section class="mb-5">
-                <p>{{ post.get_content_markdown | safe }}</p>
-                {% if post.tags.exists %}
-                    <i class="fas fa-tags"></i>
-                {% for tag in post.tags.iterator %}
-                    <a href="{{ tag.get_absolute_url }}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
-                {% endfor %}
-                    <br>
-                    <br>
-                {% endif %}
-                {% if post.file_upload %}
-                    <a href="{{ post.file_upload.url }}" class="btn btn-outline-dark" role="button"download>
-                        Download:
-
-                        {% if post.get_file_ext == 'csv' %}
-                            <i class="fa-solid fa-file-csv"></i>
-                        {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
-                            <i class="fa-solid fa-file-excel"></i>
-                        {% elif post.get_file_ext == 'docx' or post.get_file_ext == 'doc' %}
-                            <i class="fa-solid fa-file-word"></i>
+                <div id="post-area"> <!-- 포스트 영역 //-->
+                  {% if post.category %}
+                    <span class="badge badge-secondary float-right">{{ post.category }}</span>
+                  {% else %}
+                    <span class="badge badge-secondary float-right">미분류</span>
+                  {% endif %}
+                    <!-- Post content-->
+                    <article>
+                        <!-- Post header-->
+                        <header class="mb-4">
+                            <!-- Post title-->
+                            <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
+                            <h5 class="text-muted">{{ post.hook_text }}</h5>
+                            <!-- Author -->
+                            <p class="lead">
+                                by
+                                <a href="#">{{ post.author | upper }}</a>
+                            </p>
+                            {% if user.is_authenticated and user == post.author %}
+                                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{ post.pk }}" role="button"><i class="fa-solid fa-pen"></i>&nbsp;&nbsp;Edit Post</a>
+                            {% endif %}
+                            <!-- Post meta content-->
+                            <div class="text-muted fst-italic mb-2">{{ post.create_at }}</div>
+                            <hr>
+                        </header>
+                        <!-- Preview image figure-->
+                        <figure class="mb-4">
+                        {% if post.head_image %}
+                            <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image" />
                         {% else %}
-                            <i class="fa-solid fa-file"></i>
+                            <img class="img-fluid rounded" src="https://picsum.photos/seed/{{ post.id }}/800/200" alt="random_image" />
                         {% endif %}
-                        {{ post.get_file_name }}
-                    </a>
-                {% endif %}
-            </section>
-        </article>
-    </div>
-    <div id="comment-area">
-        <!-- Comments section-->
-        <section class="mb-5">
-            <div class="card bg-light">
-                <div class="card-body">
-                    <!-- Comment form-->
-                    <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
-                    
-                    {% if post.comment_set.exists %}
-                        {% for comment in post.comment_set.iterator %}
-                            <!-- Single comment-->
-                            <div class="d-flex">
-                                <div class="flex-shrink-0" id="comment-{{ comment.pk }}"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                        <div class="ms-3">
-                                            <div class="fw-bold">>&nbsp;&nbsp;{{ comment.author.username}}&nbsp;&nbsp;<small class="text-muted">{{ comment.created_at }}</small></div>
-                                            <p>{{ comment.content | linebreaks }}</p>
-                                        </div>
-                            </div>
-                        {% endfor %}
-                    {% endif %}
+                        </figure>
+                        <!-- Post content-->
+                        <section class="mb-5">
+                            <p>{{ post.get_content_markdown | safe }}</p>
+                              <!-- 태그 //-->
+                              {% if post.tags.exists %}
+                                <i class="fa-solid fa-tags"></i>
+                                {% for tag in post.tags.iterator %}
+                                    <a href="{{ tag.get_absolute_url }}">
+                                        <span class="badge text-bg-success">{{ tag }}</span></a>
+                                {% endfor %}
+                                <br /><br />
+                              {% endif %}
+                            {% if post.file_upload %}
+                                <a href="{{ post.file_upload.url }}" class="btn btn-outline-secondary" role="button" download>Download :
+                                {% if post.get_file_ext == 'csv' %}
+                                    <i class="fa-solid fa-file-csv"></i>
+                                {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                                    <i class="fa-solid fa-file-excel"></i>
+                                {% elif post.get_file_ext == 'docs' or post.get_file_ext == 'doc' %}
+                                    <i class="fa-solid fa-file-word"></i>
+                                {% else %}
+                                    <i class="fa-solid fa-file"></i>
+                                {% endif %}
+                                {{ post.get_file_name }}
+                            </a>
+                            {% endif %}
+                        </section>
+                    </article>
                 </div>
-                <hr/>
-            </div>
-        </section>
-    </div>
+                <div id="comment-area"> <!-- 댓글 영역 //-->
+                    <!-- Comments section-->
+                    <section class="mb-5">
+                        <div class="card bg-light">
+                            <div class="card-body">
+                                <!-- Comment form-->
+                                {% if user.is_authenticated %}
+                                <form id="comment-form" method="post" action="{{ post.get_absolute_url }}new_comment/">
+                                    {% csrf_token %}
+                                    {{ comment_form | crispy }}
+                                    <button type="sumbit" class="btn btn-primary">Submit</button>
+                                </form>
+                                {% else %}
+                                    <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Login in and leave a comment</a>
+                                {% endif %}
+
+                        {% if post.comment_set.exists %}
+                            {% for comment in post.comment_set.iterator %}
+                                <!-- Single comment-->
+                                <div class="d-flex">
+                                    <div class="flex-shrink-0" id="comment-{{ comment.pk }}"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                    <div class="ms-3">
+                                        <div class="fw-bold">&nbsp;&nbsp;{{ comment.author.username}}&nbsp;&nbsp;<small class="text-muted">{{ comment.created_at }}</small></div>
+                                        <p>{{ comment.content | linebreaks }}</p>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                            </div>
+                        <hr />
+                        </div>
+                    </section>
+                </div>
 {% endblock %}
