--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -80,18 +80,27 @@
                                     <button type="sumbit" class="btn btn-primary">Submit</button>
                                 </form>
                                 {% else %}
-                                    <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Login in and leave a comment</a>
+                                    <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
                                 {% endif %}
 
                         {% if post.comment_set.exists %}
                             {% for comment in post.comment_set.iterator %}
                                 <!-- Single comment-->
                                 <div class="d-flex">
-                                    <div class="flex-shrink-0" id="comment-{{ comment.pk }}"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                    <div class="flex-shrink-0" id="comment-{{ comment.pk }}">
+                                        <img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
                                     <div class="ms-3">
+                                        {% if user.is_authenticated and comment.author == user %}
+                                            <a role="button"
+                                               class="btn btn-sm btn-info float-right"
+                                               id="comment-{{ comment.pk }}-update-btn"
+                                               href="/blog/update_comment/{{ comment.pk }}/">edit</a>
+                                        {% endif %}
                                         <div class="fw-bold">&nbsp;&nbsp;{{ comment.author.username}}&nbsp;&nbsp;<small class="text-muted">{{ comment.created_at }}</small></div>
                                         <p>{{ comment.content | linebreaks }}</p>
-                                    </div>
+                                        {% if comment.create_at != comment.modified_at %}
+                                            <p class="text-muted float-right"><small>Updated: {{comment.modified_at }}</small></p>
+                                        {% endif %}
                                 </div>
                             {% endfor %}
                         {% endif %}
