--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,76 +1,92 @@
 <!DOCTYPE html>
-{% load static %}
 <html>
-  <head>
+{% load static %}
+<head>
     <title>{% block head_title %}Blog{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
+
     <script src="https://kit.fontawesome.com/b5ddff942d.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    {% include 'blog/navbar.html' %}
+</head>
 
-    <div class="container my-3">
-      <div class="row">
+<body>
+
+{% include 'blog/navbar.html' %}
+
+<div class="container my-3">
+    <div class="row">
         <div class="col-md-8 col-lg-9" id="main-area">
-          {% block main_area %}
-          {% endblock %}
+            {% block main_area %}
+            {% endblock %}
         </div>
+
         <div class="col-md-4 col-lg-3">
-          <div class="card mb-4">
-            <div class="card-header">Search</div>
-            <div class="card-body">
-              <div class="input-group">
-                <input
-                  class="form-control"
-                  type="text"
-                  placeholder="Enter search term..."
-                  aria-label="Enter search term..."
-                  aria-describedby="button-search"
-                />
-                <button
-                  class="btn btn-primary"
-                  id="button-search"
-                  type="button"
-                >
-                  Go!
-                </button>
-              </div>
+            <!-- Search Widget -->
+            <div class="card my-4">
+                <h5 class="card-header">Search</h5>
+                <div class="card-body">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search for..." id="search-input">
+                        <span class="input-group-btn">
+                                <button class="btn btn-secondary" type="button" onclick="searchPost();">Go!</button>
+                            </span>
+                    </div>
+                </div>
             </div>
-          </div>
-          <!-- Categories widget-->
-          <div class="card mb-4" id="categories-card">
-            <div class="card-header">Categories</div>
-            <div class="card-body">
-              <div class="row">
-                  <ul>
-                    {% for category in categories %}
-                    <li><a href="{{ category.get_absolute_url }}">{{ category }} ({{category.post_set.count }})</a></li>
-                    {% endfor %}
-                    <li><a href="/blog/category/no_category">미분류 ({{ no_category_post_count }})</a></li>
-                  </ul>
-              </div>
+
+            <!-- Categories Widget -->
+            <div class="card my-4" id="categories-card">
+                <h5 class="card-header">Categories</h5>
+                <div class="card-body">
+                    <div class="row">
+
+                        <ul>
+                            {% for category in categories %}
+                                <li>
+                                    <a href="{{ category.get_absolute_url }}">{{ category }} ({{ category.post_set.count }})</a>
+                                </li>
+                            {% endfor %}
+                            <li>
+                                <a href="/blog/category/no_category/">미분류 ({{ no_category_post_count }})</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
+</div>
 
-    {% include 'blog/footer.html' %}
+<script>
+    function searchPost(){
+        let searchValue = document.getElementById('search-input').value.trim();
+        if (searchValue.length > 1){
+            location.href="/blog/search/" + searchValue + "/";
+        }
+        else{
+            alert('검색어('+ searchValue +')가 너무 짧습니다.');
+        }
+    };
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    document.getElementById('search-input').addEventListener('keyup', function(event){
+        if(event.key === 'Enter'){
+            searchPost();
+        }
+    });
+</script>
+
+{% include 'blog/footer.html' %}
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+
+</body>
+
 </html>
