--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -32,9 +32,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {% if user.socialaccount_set.all.0.get_avatar_url %}
-                  <img class="rounded-circle" width="25px" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="">
+                  <img class="rounded-circle"  src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="" width="25px">
                 {% else %}
-                  <img class="rounded-circle" src="https://doitdjango.com/avatar/id/1380/74daba97b91016c0/svg/{{ user.email }}">
+                  <img class="rounded-circle" src="https://doitdjango.com/avatar/id/1380/74daba97b91016c0/svg/{{ user.email }}" alt="" width="25px">
                 {% endif %}
                 &nbsp;
                 {{ user.username }}
